# mt5linux

./: .env.example  .env.test  .gitignore  .pylintrc  CONTRIBUTING.md  DOCKER_COMPOSE_USAGE.md  Dockerfile  LICENSE.txt  Makefile  README.md  conftest.py  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_models.py
.github/workflows/: python-package.yml
mt5linux/: __init__.py  __main__.py  _resilience.py  _types.py  api_account.py  api_data.py  api_history.py  api_market.py  async_client.py  bridge.py  client.py  config.py  constants.py  constants_mt5.py  enums.py  exceptions.py  metatrader5.py  models.py  mt5.proto  mt5_pb2.py  mt5_pb2.pyi  mt5_pb2_grpc.py  mt5_pb2_grpc.pyi  protocols.py  resilience.py  resilient_server.py  server.py  server_generator.py  settings.py  types.py  utilities.py  wine_server_launcher.py
mt5linux.egg-info/: PKG-INFO  SOURCES.txt
scripts/: codegen_enums.py
tests/: __init__.py  conftest.py  constants.py  generators.py  test_01.py  test_api.py  test_async_client.py  test_bridge_behavior.py  test_client.py  test_connection.py  test_constants_validation.py  test_edge_cases.py  test_exceptions.py  test_fixture_resilience.py  test_history.py  test_integration.py  test_market_depth.py  test_method_signatures.py  test_model_schema_validation.py  test_models.py  test_parametrized.py  test_protocol_compliance.py  test_protocols.py  test_real_mt5_validation.py  test_resilience.py  test_resilient_server.py  test_server.py  test_sync_client_resilience.py  test_trading.py  test_types_consistency.py
tests/fixtures/: docker-compose.test.yaml
tests/integration/: __init__.py  test_async_client.py  test_bridge_behavior.py  test_bridge_introspection.py  test_client.py  test_constants_validation.py  test_edge_cases.py  test_fixture_resilience.py  test_history.py  test_market_depth.py  test_method_signatures.py  test_multi_container_isolation.py  test_parametrized.py  test_proto_validation.py  test_protocol_compliance.py  test_protocols.py  test_real_mt5_validation.py  test_resilience.py  test_sync_client_resilience.py  test_trading.py  test_types_consistency.py
tests/unit/: __init__.py  test_current_account.py  test_error_classification.py  test_model_schema_validation.py  test_models.py  test_order_async.py  test_provisioned_account.py  test_request_queue.py  test_transaction_safety.py  test_wal.py
typings/: MetaTrader5.pyi  orjson.pyi
typings/rpyc/: __init__.pyi
typings/rpyc/utils/: server.pyi
