[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
    name = "mt5linux"
    version = "0.3.0"
    description = "MetaTrader5 bridge for Linux via rpyc"
    authors = ["Lucas Prett Campagna"]
    license = "MIT"
    readme = "README.md"
    homepage = "https://github.com/lucas-campagna/mt5linux"
    repository = "https://github.com/lucas-campagna/mt5linux"
    packages = [{ include = "mt5linux" }]

    [tool.poetry.dependencies]
        numpy = ">=1.26.4,<2.0"
        pydantic = "^2.10.0"
        pydantic-settings = "^2.12.0"
        python = ">=3.13,<3.14"
        rpyc = "^6.0.2"
        structlog = "^25.5.0"

    [tool.poetry.group.dev.dependencies]
        hypothesis = "^6.0"
        mypy = "^1.15.0"
        pyrefly = "^0.46.0"
        pytest = "^9.0.0"
        pytest-asyncio = "^1.0.0"
        pytest-cov = "^6.0.0"
        pytest-xdist = "^3.0"
        python-dotenv = "^1.0.0"
        ruff = "^0.11.0"

[tool.ruff]
    line-length = 88
    target-version = "py313"

[tool.ruff.lint]
    exclude = [
        "*.pyi",
        "mt5linux/mt5_pb2.py",
        "mt5linux/mt5_pb2_grpc.py",
        "typings/",
    ]
    ignore = [
        "COM812",  # missing-trailing-comma (conflicts with formatter)
        "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    ]
    select = ["ALL"]

    [tool.ruff.lint.per-file-ignores]
        "tests/*" = [
            "S101",    # assert ok in tests
        ]

[tool.mypy]
    exclude = [
        "*.pyi",
        "mt5linux/mt5_pb2.py",
        "mt5linux/mt5_pb2_grpc.py",
        "typings/",
    ]
    mypy_path = "typings"
    python_version = "3.13"
    strict = true
    warn_return_any = true
    warn_unused_configs = true

[tool.pyrefly]
    exclude = [
        "*.pyi",
        "mt5linux/mt5_pb2.py",
        "mt5linux/mt5_pb2_grpc.py",
        "typings/",
    ]

[tool.pyright]
    # Pyright config for MetaTrader5 module (Wine-only)
    exclude = [
        "*.pyi",
        "mt5linux/mt5_pb2.py",
        "mt5linux/mt5_pb2_grpc.py",
        "typings/",
    ]
    include = ["mt5linux"]
    pythonVersion = "3.13"
    stubPath = "typings"

    typeCheckingMode = "strict"
    typeStubSearchPaths = ["/typings"]

[tool.pytest.ini_options]
    addopts = "-v --tb=short"
    asyncio_mode = "auto"
    markers = [
        "slow: marks tests as slow (deselect with '-m \"not slow\"')",
        "trading: marks tests that place real orders",
        "market_depth: marks tests requiring market depth subscription",
        "integration: marks tests requiring MT5 server",
        "unit: marks pure unit tests (no server needed)",
    ]
    testpaths = ["tests"]

[tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "if TYPE_CHECKING:",
        "raise NotImplementedError",
    ]

[tool.coverage.run]
    branch = true
    source = ["mt5linux"]
